gccida/c0/store_split_bit_field
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1341:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+40h] [rbp-70h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1342:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // [rsp+44h] [rbp-6Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1348:20: error: expected identifier or '('
 struct rtx_def **(short *)0x0; // [rsp+68h] [rbp-48h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1348:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1348:19: note: to match this '('
 struct rtx_def **(short *)0x0; // [rsp+68h] [rbp-48h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1349:20: error: expected identifier or '('
 struct rtx_def **(short *)0x0a; // [rsp+68h] [rbp-48h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1349:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1349:19: note: to match this '('
 struct rtx_def **(short *)0x0a; // [rsp+68h] [rbp-48h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1365:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( op0[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1381:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( op0[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1399:39: error: invalid suffix 'xmode' on integer constant
word = gen_lowpart_common( *(short *)0xmode, value); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1402:18: error: invalid suffix 'xmode' on integer constant
v14 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1406:19: error: invalid suffix 'xmode' on integer constant
mode = *(short *)0xmode; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1444:44: error: invalid suffix 'xmode' on integer constant
part = extract_fixed_bit_field( *(short *)0xmode, value, 0LL, v11, bitsdone, 0LL, 1); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1450:41: error: invalid suffix 'orce' on integer constant
*(short *)0x0 = operand_sub*(short *)0xforce( 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1453:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0->fld[0].rtwint)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1453:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0->fld[0].rtwint)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1450:17: error: use of undeclared identifier 'operand_sub'
*(short *)0x0 = operand_sub*(short *)0xforce( 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1458:42: error: invalid suffix 'orce' on integer constant
*(short *)0x0a = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1458:63: error: use of undeclared identifier 'machine_mode'
*(short *)0x0a = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/expmed.c:1458:78: error: expected expression
*(short *)0x0a = operand_sub*(short *)0xforce( op0, offset, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                                                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/store_split_bit_field/src/obj/expmed.o] Error 1
